--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A suite for the testing framework known as Protractor, covering accessibility tests A, AA and AAA",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,13 @@
   "bugs": {
     "url": "https://github.com/vtombesi/protractor-accessibility/issues"
   },
-  "homepage": "https://github.com/vtombesi/protractor-accessibility#readme"
+  "homepage": "https://github.com/vtombesi/protractor-accessibility#readme",
+  "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
+  }
 }
